gccida/g0/legitimate_pic_address_disp_p
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/legitimate_pic_address_disp_p/src/i386.c:5174:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v5; // edx 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/legitimate_pic_address_disp_p/src/i386.c:5191:35: error: use of undeclared identifier 'machine_mode'
if ( local_symbolic_operand( x, ( machine_mode)v1) ) 
                                  ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/legitimate_pic_address_disp_p/src/i386.c:5196:23: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v3.rtwint = ( __int64)a1->fld[0]; 
                      ^~~~~~~~~~
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/legitimate_pic_address_disp_p/src/obj/i386.o] Error 1
